syntax = "proto3";

package lessonService;

import "lesson.proto";

service LessonService {
  rpc GetLessons (LessonsRequest) returns (LessonsResponse) {}
  rpc GetLessonsForMonth (LessonsForMonthRequest) returns (LessonsForMonthResponse) {}
}

message LessonsRequest {
  string date = 1;
}

message LessonsResponse {
  repeated lesson.Schedule lessons = 1;
}


message LessonsForMonthRequest {
  int32 month = 1;
  int32 year = 2;
}

message LessonsForMonthResponse {
  repeated string dates = 1;
}